--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,7 +4,14 @@
            xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 		  http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
            version="2.5">
-
+<servlet>
+    <servlet-name>MyServelt</servlet-name>
+    <servlet-class>Servlet.LoginServlet</servlet-class>
+</servlet>
+    <servlet-mapping>
+        <servlet-name>MyServelt</servlet-name>
+        <url-pattern>/servlet/MyServelt</url-pattern>
+    </servlet-mapping>
     <!-- 首页为 index.jsp-->
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
